examples/Example - Pascal Frontend/pascalParser.js
"use strict";
// Generated from ./pascal.g4 by ANTLR 4.9.0-SNAPSHOT
var __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    Object.defineProperty(o, k2, { enumerable: true, get: function() { return m[k]; } });
}) : (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    o[k2] = m[k];
}));
var __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {
    Object.defineProperty(o, "default", { enumerable: true, value: v });
}) : function(o, v) {
    o["default"] = v;
});
var __importStar = (this && this.__importStar) || function (mod) {
    if (mod && mod.__esModule) return mod;
    var result = {};
    if (mod != null) for (var k in mod) if (k !== "default" && Object.prototype.hasOwnProperty.call(mod, k)) __createBinding(result, mod, k);
    __setModuleDefault(result, mod);
    return result;
};
Object.defineProperty(exports, "__esModule", { value: true });
exports.ProcedureDeclarationContext = exports.ProcedureOrFunctionDeclarationContext = exports.ProcedureAndFunctionDeclarationPartContext = exports.VariableDeclarationContext = exports.VariableDeclarationPartContext = exports.PointerTypeContext = exports.FileTypeContext = exports.BaseTypeContext = exports.SetTypeContext = exports.VariantContext = exports.TagContext = exports.VariantPartContext = exports.RecordSectionContext = exports.FixedPartContext = exports.FieldListContext = exports.RecordTypeContext = exports.ComponentTypeContext = exports.IndexTypeContext = exports.TypeListContext = exports.ArrayTypeContext = exports.StringtypeContext = exports.UnpackedStructuredTypeContext = exports.StructuredTypeContext = exports.TypeIdentifierContext = exports.SubrangeTypeContext = exports.ScalarTypeContext = exports.SimpleTypeContext = exports.Type_Context = exports.ProcedureTypeContext = exports.FunctionTypeContext = exports.TypeDefinitionContext = exports.TypeDefinitionPartContext = exports.StringContext = exports.Bool_Context = exports.SignContext = exports.UnsignedRealContext = exports.UnsignedIntegerContext = exports.UnsignedNumberContext = exports.ConstantContext = exports.ConstantChrContext = exports.ConstantDefinitionContext = exports.ConstantDefinitionPartContext = exports.LabelContext = exports.LabelDeclarationPartContext = exports.UsesUnitsPartContext = exports.BlockContext = exports.IdentifierContext = exports.ProgramHeadingContext = exports.ProgramContext = exports.pascalParser = void 0;
exports.RecordVariableListContext = exports.WithStatementContext = exports.FinalValueContext = exports.InitialValueContext = exports.ForListContext = exports.ForStatementContext = exports.RepeatStatementContext = exports.WhileStatementContext = exports.RepetetiveStatementContext = exports.CaseListElementContext = exports.CaseStatementContext = exports.IfStatementContext = exports.ConditionalStatementContext = exports.StatementsContext = exports.CompoundStatementContext = exports.StructuredStatementContext = exports.Empty_Context = exports.EmptyStatement_Context = exports.GotoStatementContext = exports.ParameterwidthContext = exports.ActualParameterContext = exports.ProcedureStatementContext = exports.ElementContext = exports.ElementListContext = exports.Set_Context = exports.ParameterListContext = exports.FunctionDesignatorContext = exports.UnsignedConstantContext = exports.FactorContext = exports.SignedFactorContext = exports.MultiplicativeoperatorContext = exports.TermContext = exports.AdditiveoperatorContext = exports.SimpleExpressionContext = exports.RelationaloperatorContext = exports.ExpressionContext = exports.VariableContext = exports.AssignmentStatementContext = exports.SimpleStatementContext = exports.UnlabelledStatementContext = exports.StatementContext = exports.ResultTypeContext = exports.FunctionDeclarationContext = exports.ConstListContext = exports.IdentifierListContext = exports.ParameterGroupContext = exports.FormalParameterSectionContext = exports.FormalParameterListContext = void 0;
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = __importStar(require("antlr4ts/misc/Utils"));
class pascalParser extends Parser_1.Parser {
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(pascalParser._ATN, this);
    }
    // @Override
    // @NotNull
    get vocabulary() {
        return pascalParser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "pascal.g4"; }
    // @Override
    get ruleNames() { return pascalParser.ruleNames; }
    // @Override
    get serializedATN() { return pascalParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException_1.FailedPredicateException(this, predicate, message);
    }
    // @RuleVersion(0)
    program() {
        let _localctx = new ProgramContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, pascalParser.RULE_program);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 194;
                this.programHeading();
                this.state = 196;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === pascalParser.INTERFACE) {
                    {
                        this.state = 195;
                        this.match(pascalParser.INTERFACE);
                    }
                }
                this.state = 198;
                this.block();
                this.state = 199;
                this.match(pascalParser.DOT);
                this.state = 200;
                this.match(pascalParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    programHeading() {
        let _localctx = new ProgramHeadingContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, pascalParser.RULE_programHeading);
        let _la;
        try {
            this.state = 216;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case pascalParser.PROGRAM:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 202;
                        this.match(pascalParser.PROGRAM);
                        this.state = 203;
                        this.identifier();
                        this.state = 208;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        if (_la === pascalParser.LPAREN) {
                            {
                                this.state = 204;
                                this.match(pascalParser.LPAREN);
                                this.state = 205;
                                this.identifierList();
                                this.state = 206;
                                this.match(pascalParser.RPAREN);
                            }
                        }
                        this.state = 210;
                        this.match(pascalParser.SEMI);
                    }
                    break;
                case pascalParser.UNIT:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 212;
                        this.match(pascalParser.UNIT);
                        this.state = 213;
                        this.identifier();
                        this.state = 214;
                        this.match(pascalParser.SEMI);
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    identifier() {
        let _localctx = new IdentifierContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, pascalParser.RULE_identifier);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 218;
                this.match(pascalParser.IDENT);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    block() {
        let _localctx = new BlockContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, pascalParser.RULE_block);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 229;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (((((_la - 8)) & ~0x1F) === 0 && ((1 << (_la - 8)) & ((1 << (pascalParser.CONST - 8)) | (1 << (pascalParser.FUNCTION - 8)) | (1 << (pascalParser.LABEL - 8)) | (1 << (pascalParser.PROCEDURE - 8)) | (1 << (pascalParser.TYPE - 8)) | (1 << (pascalParser.VAR - 8)))) !== 0) || _la === pascalParser.USES || _la === pascalParser.IMPLEMENTATION) {
                    {
                        this.state = 227;
                        this._errHandler.sync(this);
                        switch (this._input.LA(1)) {
                            case pascalParser.LABEL:
                                {
                                    this.state = 220;
                                    this.labelDeclarationPart();
                                }
                                break;
                            case pascalParser.CONST:
                                {
                                    this.state = 221;
                                    this.constantDefinitionPart();
                                }
                                break;
                            case pascalParser.TYPE:
                                {
                                    this.state = 222;
                                    this.typeDefinitionPart();
                                }
                                break;
                            case pascalParser.VAR:
                                {
                                    this.state = 223;
                                    this.variableDeclarationPart();
                                }
                                break;
                            case pascalParser.FUNCTION:
                            case pascalParser.PROCEDURE:
                                {
                                    this.state = 224;
                                    this.procedureAndFunctionDeclarationPart();
                                }
                                break;
                            case pascalParser.USES:
                                {
                                    this.state = 225;
                                    this.usesUnitsPart();
                                }
                                break;
                            case pascalParser.IMPLEMENTATION:
                                {
                                    this.state = 226;
                                    this.match(pascalParser.IMPLEMENTATION);
                                }
                                break;
                            default:
                                throw new NoViableAltException_1.NoViableAltException(this);
                        }
                    }
                    this.state = 231;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 232;
                this.compoundStatement();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    usesUnitsPart() {
        let _localctx = new UsesUnitsPartContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, pascalParser.RULE_usesUnitsPart);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 234;
                this.match(pascalParser.USES);
                this.state = 235;
                this.identifierList();
                this.state = 236;
                this.match(pascalParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    labelDeclarationPart() {
        let _localctx = new LabelDeclarationPartContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, pascalParser.RULE_labelDeclarationPart);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 238;
                this.match(pascalParser.LABEL);
                this.state = 239;
                this.label();
                this.state = 244;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === pascalParser.COMMA) {
                    {
                        {
                            this.state = 240;
                            this.match(pascalParser.COMMA);
                            this.state = 241;
                            this.label();
                        }
                    }
                    this.state = 246;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 247;
                this.match(pascalParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    label() {
        let _localctx = new LabelContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, pascalParser.RULE_label);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 249;
                this.unsignedInteger();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    constantDefinitionPart() {
        let _localctx = new ConstantDefinitionPartContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, pascalParser.RULE_constantDefinitionPart);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 251;
                this.match(pascalParser.CONST);
                this.state = 255;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    {
                        {
                            this.state = 252;
                            this.constantDefinition();
                            this.state = 253;
                            this.match(pascalParser.SEMI);
                        }
                    }
                    this.state = 257;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while (_la === pascalParser.IDENT);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    constantDefinition() {
        let _localctx = new ConstantDefinitionContext(this._ctx, this.state);
        this.enterRule(_localctx, 16, pascalParser.RULE_constantDefinition);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 259;
                this.identifier();
                this.state = 260;
                this.match(pascalParser.EQUAL);
                this.state = 261;
                this.constant();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    constantChr() {
        let _localctx = new ConstantChrContext(this._ctx, this.state);
        this.enterRule(_localctx, 18, pascalParser.RULE_constantChr);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 263;
                this.match(pascalParser.CHR);
                this.state = 264;
                this.match(pascalParser.LPAREN);
                this.state = 265;
                this.unsignedInteger();
                this.state = 266;
                this.match(pascalParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    constant() {
        let _localctx = new ConstantContext(this._ctx, this.state);
        this.enterRule(_localctx, 20, pascalParser.RULE_constant);
        try {
            this.state = 278;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 7, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 268;
                        this.unsignedNumber();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 269;
                        this.sign();
                        this.state = 270;
                        this.unsignedNumber();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 272;
                        this.identifier();
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 273;
                        this.sign();
                        this.state = 274;
                        this.identifier();
                    }
                    break;
                case 5:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 276;
                        this.string();
                    }
                    break;
                case 6:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 277;
                        this.constantChr();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    unsignedNumber() {
        let _localctx = new UnsignedNumberContext(this._ctx, this.state);
        this.enterRule(_localctx, 22, pascalParser.RULE_unsignedNumber);
        try {
            this.state = 282;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case pascalParser.NUM_INT:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 280;
                        this.unsignedInteger();
                    }
                    break;
                case pascalParser.NUM_REAL:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 281;
                        this.unsignedReal();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    unsignedInteger() {
        let _localctx = new UnsignedIntegerContext(this._ctx, this.state);
        this.enterRule(_localctx, 24, pascalParser.RULE_unsignedInteger);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 284;
                this.match(pascalParser.NUM_INT);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    unsignedReal() {
        let _localctx = new UnsignedRealContext(this._ctx, this.state);
        this.enterRule(_localctx, 26, pascalParser.RULE_unsignedReal);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 286;
                this.match(pascalParser.NUM_REAL);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    sign() {
        let _localctx = new SignContext(this._ctx, this.state);
        this.enterRule(_localctx, 28, pascalParser.RULE_sign);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 288;
                _la = this._input.LA(1);
                if (!(_la === pascalParser.PLUS || _la === pascalParser.MINUS)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    bool_() {
        let _localctx = new Bool_Context(this._ctx, this.state);
        this.enterRule(_localctx, 30, pascalParser.RULE_bool_);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 290;
                _la = this._input.LA(1);
                if (!(_la === pascalParser.TRUE || _la === pascalParser.FALSE)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    string() {
        let _localctx = new StringContext(this._ctx, this.state);
        this.enterRule(_localctx, 32, pascalParser.RULE_string);
        try {
            this.enterOuterAlt(_localctx, 1);
